<resources>
    <string name="app_name">Weather forcast MVVM</string>

    <string name="view_weather">Show</string>
    <string name="degree_celsius_symbol">°C</string>
    <string name="description_weather_condition_icon">weather condition icon</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_visibility">Visibility</string>
    <string name="label_sunrise">Sunrise</string>
    <string name="label_sunset">Sunset</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="feels_like">Feels Like</string>
    <string name="wind_direction">Wind Direction</string>
</resources>
